5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1637_2447.log
== TEST (2019-04-13 13:18:56) 
-- CODE:
preco = float(input("compra:"))
valor = preco-((preco * 0.05)/ 100)

if(preco>=200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
-- OUTPUT:
38.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:18:59) 
-- CODE:
preco = float(input("compra:"))
valor = preco-((preco * 0.05)/ 100)

if(preco>=200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
-- OUTPUT:
38.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 13:19:06) 
-- CODE:
preco = float(input("compra:"))
valor = preco-((preco * 0.05)/ 100)

if(preco>=200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
-- EXECUTION TIME:
0.13263
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
38.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
32.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 13:19:53) 
-- CODE:
preco = float(input("compra:"))
valor = preco-((preco * 0.05)/ 100)

if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
-- EXECUTION TIME:
0.153594
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
38.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
32.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:04:39) 
-- CODE:
p= float(input("custo:"))
q- float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print("Falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- EXECUTION TIME:
0.13405
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2447/main.py", line 2, in <module>
    q- float(input())
NameError: name 'q' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:05:53) 
-- CODE:
p= float(input("custo:"))
q- float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print("Falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    q- float(input())
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:06:13) 
-- CODE:
p= float(input("custo:"))
q= float(input("pago:"))

x= p-q
y= q-p

if(p > q):
	print("Falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- EXECUTION TIME:
0.158391
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
